using predicted_speed t-1 instead of real speed and add trip_id

--- a/notebooks/03_ml_train_quality_eval.ipynb
+++ b/notebooks/03_ml_train_quality_eval.ipynb
@@ -215,6 +215,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# CELL 7: Prepare Training Data (YOUR FEATURES)\n",
         "feature_cols = [\n",
         "    'enhanced_altitude', 'bearing',\n",
