--- a/notebooks/08_ml_validate_quality.ipynb
+++ b/notebooks/08_ml_validate_quality.ipynb
@@ -57,6 +57,8 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
+        "from tqdm import tqdm\n",
+        "\n",
         "sns.set_style('whitegrid')\n",
         "print(\"✅ Libraries imported successfully!\")"
       ]
@@ -245,35 +247,108 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 7: Make Predictions (YOUR ACCELERATION METHOD!)\n",
-        "print(\"\\nGenerating predictions on test set...\")\n",
+        "# CELL 7: Make Autoregressive Predictions (Real-World Simulation)\n",
         "\n",
-        "# Predict speed\n",
-        "y_pred_speed = speed_model.predict(X_test_scaled)\n",
-        "df_test['predicted_speed'] = y_pred_speed\n",
+        "print(\"\\n=== GENERATING AUTOREGRESSIVE PREDICTIONS (High Accuracy Mode) ===\")\n",
+        "print(\"⚠️ This loops through data row-by-row. It may take a few minutes for large datasets.\")\n",
         "\n",
-        "# YOUR WAY: Calculate acceleration from speed difference\n",
-        "# predicted_accel = predicted_speed(t) - speed_mps_prev1(t)\n",
-        "df_test['predicted_accel'] = df_test['predicted_speed'] - df_test['speed_mps_prev1']\n",
+        "# 1. Sort data is CRITICAL for autoregressive logic\n",
+        "# Pastikan data urut waktu per trip\n",
+        "if 'trip_id' in df_test.columns:\n",
+        "    df_test = df_test.sort_values(['trip_id', 'seconds_elapsed']).reset_index(drop=True)\n",
+        "else:\n",
+        "    df_test = df_test.sort_values('seconds_elapsed').reset_index(drop=True)\n",
         "\n",
-        "# Get true values\n",
+        "# 2. Initialize columns\n",
+        "df_test['predicted_speed'] = 0.0\n",
+        "# Kita perlu tahu index kolom prev speed di dalam list feature_cols\n",
+        "idx_prev1 = feature_cols.index('speed_mps_prev1')\n",
+        "idx_prev2 = feature_cols.index('speed_mps_prev2')\n",
+        "\n",
+        "print(f\"Feature columns count: {len(feature_cols)}\")\n",
+        "print(f\"Updating feature indices: prev1={idx_prev1}, prev2={idx_prev2}\")\n",
+        "\n",
+        "# 3. Start Autoregressive Loop\n",
+        "# Kita convert ke numpy array dulu supaya sedikit lebih cepat daripada pure pandas loc\n",
+        "# Tapi kita tetap butuh update nilai fitur sebelum scaling\n",
+        "\n",
+        "# Prediksi akan disimpan di list dulu\n",
+        "predictions = []\n",
+        "\n",
+        "# Iterasi baris per baris\n",
+        "for i in tqdm(range(len(df_test)), desc=\"Predicting per second\"):\n",
+        "    \n",
+        "    # A. LOGIC UPDATE FEATURE DARI PREDIKSI SEBELUMNYA\n",
+        "    # Cek apakah ini baris pertama dari sebuah trip?\n",
+        "    is_new_trip = False\n",
+        "    if i == 0:\n",
+        "        is_new_trip = True\n",
+        "    elif 'trip_id' in df_test.columns and df_test.at[i, 'trip_id'] != df_test.at[i-1, 'trip_id']:\n",
+        "        is_new_trip = True\n",
+        "        \n",
+        "    if not is_new_trip:\n",
+        "        # Ambil hasil prediksi detik sebelumnya (i-1)\n",
+        "        prev_pred_1 = predictions[i-1]\n",
+        "        \n",
+        "        # Ambil hasil prediksi 2 detik lalu (i-2), cek trip id yg sama\n",
+        "        if i > 1 and df_test.at[i, 'trip_id'] == df_test.at[i-2, 'trip_id']:\n",
+        "            prev_pred_2 = predictions[i-2]\n",
+        "        else:\n",
+        "            prev_pred_2 = prev_pred_1 # Fallback\n",
+        "            \n",
+        "        # --- UPDATE FITUR UTAMA DI DATAFRAME ---\n",
+        "        # Kita Timpa nilai speed_mps_prev1 yang asalnya dari data asli\n",
+        "        # menjadi data hasil prediksi. INI KUNCINYA.\n",
+        "        df_test.at[i, 'speed_mps_prev1'] = prev_pred_1\n",
+        "        df_test.at[i, 'speed_mps_prev2'] = prev_pred_2\n",
+        "        \n",
+        "    else:\n",
+        "        # Jika awal trip, kita asumsikan start dari 0 atau data asli t=0\n",
+        "        # (Biasanya start dari diam)\n",
+        "        df_test.at[i, 'speed_mps_prev1'] = 0.0\n",
+        "        df_test.at[i, 'speed_mps_prev2'] = 0.0\n",
+        "\n",
+        "    # B. PREPARE INPUT VECTOR\n",
+        "    # Ambil fitur untuk baris ini (yang sudah di-update prev speed-nya)\n",
+        "    X_row = df_test.loc[i, feature_cols].values.reshape(1, -1)\n",
+        "    \n",
+        "    # C. SCALE\n",
+        "    # Scale input menggunakan scaler yg sama dengan training\n",
+        "    X_row_scaled = scaler.transform(X_row)\n",
+        "    \n",
+        "    # D. PREDICT\n",
+        "    # Prediksi speed saat ini\n",
+        "    pred_speed = speed_model.predict(X_row_scaled)[0]\n",
+        "    \n",
+        "    # Safety: Speed tidak boleh negatif\n",
+        "    if pred_speed < 0: \n",
+        "        pred_speed = 0.0\n",
+        "        \n",
+        "    predictions.append(pred_speed)\n",
+        "\n",
+        "# 4. Simpan ke DataFrame\n",
+        "df_test['predicted_speed'] = predictions\n",
+        "y_pred_speed = np.array(predictions)\n",
+        "\n",
+        "# 5. Hitung Akselerasi berdasarkan PREDIKSI SPEED (Speed Difference Method)\n",
+        "# Accel = Pred_Speed(t) - Pred_Speed(t-1)\n",
+        "# Hati-hati: t-1 nya harus dari trip yang sama.\n",
+        "if 'trip_id' in df_test.columns:\n",
+        "    # Shift hasil prediksi untuk mendapatkan t-1\n",
+        "    df_test['pred_speed_prev'] = df_test.groupby('trip_id')['predicted_speed'].shift(1).fillna(0)\n",
+        "    # Hitung accel\n",
+        "    df_test['predicted_accel'] = df_test['predicted_speed'] - df_test['pred_speed_prev']\n",
+        "else:\n",
+        "    df_test['pred_speed_prev'] = df_test['predicted_speed'].shift(1).fillna(0)\n",
+        "    df_test['predicted_accel'] = df_test['predicted_speed'] - df_test['pred_speed_prev']\n",
+        "\n",
+        "y_pred_accel = df_test['predicted_accel'].values\n",
         "y_test_speed = df_test['speed_mps'].values\n",
         "y_test_accel = df_test['acceleration'].values\n",
-        "y_pred_accel = df_test['predicted_accel'].values\n",
         "\n",
-        "print(\"✅ Predictions generated using YOUR method:\")\n",
-        "print(f\"   predicted_accel = predicted_speed - speed_mps_prev1\")\n",
-        "print(f\"   Speed predictions: {y_pred_speed.shape}\")\n",
-        "print(f\"   Accel predictions: {y_pred_accel.shape}\")\n",
-        "\n",
-        "# DEBUG: Check data sanity\n",
-        "print(f\"\\n🔍 DEBUG: Data Sanity Checks\")\n",
-        "print(f\"   speed_mps_prev1 range: [{df_test['speed_mps_prev1'].min():.2f}, {df_test['speed_mps_prev1'].max():.2f}]\")\n",
-        "print(f\"   predicted_speed range: [{df_test['predicted_speed'].min():.2f}, {df_test['predicted_speed'].max():.2f}]\")\n",
-        "print(f\"   predicted_accel range: [{df_test['predicted_accel'].min():.2f}, {df_test['predicted_accel'].max():.2f}]\")\n",
-        "print(f\"   actual_accel range: [{df_test['acceleration'].min():.2f}, {df_test['acceleration'].max():.2f}]\")\n",
-        "print(f\"   NaN in speed_mps_prev1: {df_test['speed_mps_prev1'].isna().sum()}\")\n",
-        "print(f\"   NaN in predicted_accel: {df_test['predicted_accel'].isna().sum()}\")"
+        "print(\"✅ Autoregressive prediction complete.\")\n",
+        "print(f\"   Speed predictions shape: {y_pred_speed.shape}\")\n",
+        "print(f\"   Accel predictions shape: {y_pred_accel.shape}\")"
       ]
     },
     {
