--- a/notebooks/01_ml_train_test_split.ipynb
+++ b/notebooks/01_ml_train_test_split.ipynb
@@ -18,7 +18,6 @@
       },
       "outputs": [],
       "source": [
-        "# CELL 1: Parameters (Injected by Papermill)\n",
         "RUN_TIMESTAMP = \"2025-01-01_00-00-00\"\n",
         "INPUT_FOLDER = \"s3://processed-data\"\n",
         "OUTPUT_TRAIN_DATA = \"s3://models-quality-eval-ml/train/train_data.pkl\"\n",
@@ -28,7 +27,6 @@
         "RANDOM_SEED = 42\n",
         "MIN_ROWS_FOR_SPLIT = 1000\n",
         "\n",
-        "# MinIO Credentials\n",
         "MINIO_ENDPOINT = \"http://minio:9000\"\n",
         "MINIO_ACCESS_KEY = \"admin\"\n",
         "MINIO_SECRET_KEY = \"password123\""
@@ -40,14 +38,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 2: Imports\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import pickle\n",
         "import s3fs\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "print(\"✅ Libraries imported successfully\")"
+        "from sklearn.model_selection import train_test_split"
       ]
     },
     {
@@ -56,7 +51,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 3: Initialize MinIO Connection\n",
         "print(\"=== ML Quality Eval: Train/Test Split ===\")\n",
         "print(f\"Run Timestamp: {RUN_TIMESTAMP}\")\n",
         "print(f\"MinIO Endpoint: {MINIO_ENDPOINT}\")\n",
@@ -72,9 +66,7 @@
         "    \"key\": MINIO_ACCESS_KEY,\n",
         "    \"secret\": MINIO_SECRET_KEY,\n",
         "    \"client_kwargs\": {\"endpoint_url\": MINIO_ENDPOINT}\n",
-        "}\n",
-        "\n",
-        "print(\"✅ MinIO connection initialized\")"
+        "}"
       ]
     },
     {
@@ -83,9 +75,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 4: Ensure Bucket and Folder Structure Exists\n",
-        "print(\"\\nEnsuring bucket and folder structure...\")\n",
-        "\n",
         "# Create bucket if not exists\n",
         "try:\n",
         "    fs.ls('models-quality-eval-ml')\n",
@@ -107,9 +96,7 @@
         "        fs.ls(folder)\n",
         "    except FileNotFoundError:\n",
         "        fs.mkdir(folder)\n",
-        "        print(f\"✅ Created folder: {folder}\")\n",
-        "\n",
-        "print(\"✅ Folder structure ready\")"
+        "        print(f\"Created folder: {folder}\")"
       ]
     },
     {
@@ -118,20 +105,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 5: List and Validate CSV Files\n",
-        "print(\"\\nSearching for CSV files...\")\n",
-        "\n",
-        "# Remove s3:// prefix for glob\n",
         "input_prefix = INPUT_FOLDER.replace('s3://', '')\n",
         "if not input_prefix.endswith('/'):\n",
         "    input_prefix += '/'\n",
         "\n",
         "try:\n",
         "    raw_paths = fs.glob(f\"{input_prefix}*.csv\")\n",
-        "    # Add s3:// prefix back\n",
         "    file_paths = [f\"s3://{p}\" for p in raw_paths]\n",
         "    \n",
-        "    print(f\"✅ Found {len(file_paths)} CSV file(s)\")\n",
+        "    print(f\"Found {len(file_paths)} CSV file(s)\")\n",
         "    for i, path in enumerate(file_paths, 1):\n",
         "        print(f\"   {i}. {path.split('/')[-1]}\")\n",
         "    \n",
@@ -152,16 +134,13 @@
         "# CELL 6: Determine Split Strategy\n",
         "if len(file_paths) >= 10:\n",
         "    split_strategy = \"file-level\"\n",
-        "    print(f\"\\n✅ Strategy: FILE-LEVEL SPLIT\")\n",
         "    print(f\"   Multiple files available ({len(file_paths)} files)\")\n",
         "elif len(file_paths) >= 2:\n",
         "    split_strategy = \"file-level\"\n",
-        "    print(f\"\\n⚠️  Strategy: FILE-LEVEL SPLIT\")\n",
         "    print(f\"   Limited files: {len(file_paths)} files\")\n",
         "    print(f\"   Warning: Split may not be fully representative\")\n",
         "else:\n",
         "    split_strategy = \"row-level\"\n",
-        "    print(f\"\\n⚠️  Strategy: ROW-LEVEL SPLIT\")\n",
         "    print(f\"   Single file detected: {file_paths[0].split('/')[-1]}\")\n",
         "    print(f\"   Will split by trip_id or random rows\")"
       ]
@@ -172,12 +151,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 7: Perform Split\n",
+        "# CELL 7: Perform Split with Auto-Generated trip_id\n",
         "np.random.seed(RANDOM_SEED)\n",
         "\n",
+        "# Helper function untuk extract nama file jadi trip_id\n",
+        "def get_trip_id_from_path(path):\n",
+        "    # Ambil nama file paling belakang, buang .csv\n",
+        "    filename = path.split('/')[-1]\n",
+        "    return filename.replace('.csv', '').replace('.CSV', '')\n",
+        "\n",
         "if split_strategy == \"file-level\":\n",
-        "    # ===== FILE-LEVEL SPLIT =====\n",
-        "    print(f\"\\nPerforming file-level split...\")\n",
+        "    # === STRATEGY 1: BANYAK FILE (Split File-nya) ===\n",
         "    \n",
         "    train_files, test_files = train_test_split(\n",
         "        file_paths,\n",
@@ -190,13 +174,17 @@
         "    print(f\"Train Files: {len(train_files)} ({len(train_files)/len(file_paths)*100:.1f}%)\")\n",
         "    print(f\"Test Files: {len(test_files)} ({len(test_files)/len(file_paths)*100:.1f}%)\")\n",
         "    \n",
-        "    # Load train files\n",
-        "    print(f\"\\nLoading {len(train_files)} training file(s)...\")\n",
+        "    # --- LOAD TRAIN FILES ---\n",
         "    train_dfs = []\n",
         "    for f in train_files:\n",
         "        try:\n",
-        "            print(f\"  → {f.split('/')[-1]}\")\n",
+        "            print(f\"  → Loading Train: {f.split('/')[-1]}\")\n",
         "            df_tmp = pd.read_csv(f, storage_options=storage_options)\n",
+        "            \n",
+        "            # [BARU] Generate trip_id dari nama file jika belum ada\n",
+        "            if 'trip_id' not in df_tmp.columns:\n",
+        "                df_tmp['trip_id'] = get_trip_id_from_path(f)\n",
+        "                \n",
         "            train_dfs.append(df_tmp)\n",
         "        except Exception as e:\n",
         "            print(f\"  ⚠️  Error loading {f}: {e}\")\n",
@@ -205,15 +193,19 @@
         "        raise ValueError(\"Could not load any training files\")\n",
         "    \n",
         "    train_data = pd.concat(train_dfs, ignore_index=True)\n",
-        "    print(f\"✅ Train data: {train_data.shape}\")\n",
+        "    print(f\"✅ Train data combined: {train_data.shape}\")\n",
         "    \n",
-        "    # Load test files\n",
-        "    print(f\"\\nLoading {len(test_files)} test file(s)...\")\n",
+        "    # --- LOAD TEST FILES ---\n",
         "    test_dfs = []\n",
         "    for f in test_files:\n",
         "        try:\n",
-        "            print(f\"  → {f.split('/')[-1]}\")\n",
+        "            print(f\"  → Loading Test: {f.split('/')[-1]}\")\n",
         "            df_tmp = pd.read_csv(f, storage_options=storage_options)\n",
+        "            \n",
+        "            # [BARU] Generate trip_id dari nama file jika belum ada\n",
+        "            if 'trip_id' not in df_tmp.columns:\n",
+        "                df_tmp['trip_id'] = get_trip_id_from_path(f)\n",
+        "                \n",
         "            test_dfs.append(df_tmp)\n",
         "        except Exception as e:\n",
         "            print(f\"  ⚠️  Error loading {f}: {e}\")\n",
@@ -222,12 +214,18 @@
         "        raise ValueError(\"Could not load any test files\")\n",
         "    \n",
         "    test_data = pd.concat(test_dfs, ignore_index=True)\n",
-        "    print(f\"✅ Test data: {test_data.shape}\")\n",
+        "    print(f\"✅ Test data combined: {test_data.shape}\")\n",
         "    \n",
         "else:\n",
-        "    # ===== ROW-LEVEL SPLIT (Single File) =====\n",
-        "    print(f\"\\nLoading file: {file_paths[0].split('/')[-1]}\")\n",
+        "    # === STRATEGY 2: SATU FILE (Split Baris-nya) ===\n",
+        "    print(f\"\\nLoading single file: {file_paths[0].split('/')[-1]}\")\n",
         "    df_full = pd.read_csv(file_paths[0], storage_options=storage_options)\n",
+        "    \n",
+        "    # [BARU] Generate trip_id dari nama file jika belum ada\n",
+        "    if 'trip_id' not in df_full.columns:\n",
+        "        print(\"   Generating trip_id from filename...\")\n",
+        "        df_full['trip_id'] = get_trip_id_from_path(file_paths[0])\n",
+        "        \n",
         "    print(f\"✅ Total rows: {len(df_full):,}\")\n",
         "    \n",
         "    # Check minimum rows\n",
@@ -235,11 +233,11 @@
         "        print(f\"\\n⚠️  Warning: {len(df_full):,} rows < MIN_ROWS_FOR_SPLIT ({MIN_ROWS_FOR_SPLIT:,})\")\n",
         "        print(f\"   Metrics may be unstable with limited data\")\n",
         "    \n",
-        "    # Split by trip_id if available\n",
-        "    if 'trip_id' in df_full.columns:\n",
-        "        print(f\"\\n✅ Splitting by trip_id...\")\n",
+        "    # Split logic\n",
+        "    if len(df_full['trip_id'].unique()) > 1:\n",
+        "        # Jika dalam satu file ternyata ada banyak trip_id\n",
+        "        print(f\"\\n✅ Splitting by existing trip_id...\")\n",
         "        unique_trips = df_full['trip_id'].unique()\n",
-        "        print(f\"   Found {len(unique_trips)} unique trips\")\n",
         "        \n",
         "        train_trips, test_trips = train_test_split(\n",
         "            unique_trips,\n",
@@ -250,21 +248,18 @@
         "        \n",
         "        train_data = df_full[df_full['trip_id'].isin(train_trips)].copy()\n",
         "        test_data = df_full[df_full['trip_id'].isin(test_trips)].copy()\n",
-        "        \n",
-        "        print(f\"   Train trips: {len(train_trips)}\")\n",
-        "        print(f\"   Test trips: {len(test_trips)}\")\n",
         "    else:\n",
-        "        print(f\"\\n⚠️  No trip_id column found\")\n",
-        "        print(f\"   Using random row split (may split individual trips)\")\n",
+        "        # Jika benar-benar cuma 1 trip (single file, single trip)\n",
+        "        print(f\"\\n✅ Single trip detected. Splitting rows randomly (Time-series split recommended but using random for simplicity)\")\n",
         "        \n",
         "        train_data, test_data = train_test_split(\n",
         "            df_full,\n",
         "            train_size=TRAIN_RATIO,\n",
         "            random_state=RANDOM_SEED,\n",
-        "            shuffle=True\n",
+        "            shuffle=False # Shuffle False supaya urutan waktu terjaga (opsional, tapi bagus buat time series)\n",
         "        )\n",
         "    \n",
-        "    print(f\"\\n=== Split Results ===\")\n",
+        "    print(f\"\\n=== Split Results === \")\n",
         "    print(f\"Train rows: {len(train_data):,} ({len(train_data)/len(df_full)*100:.1f}%)\")\n",
         "    print(f\"Test rows: {len(test_data):,} ({len(test_data)/len(df_full)*100:.1f}%)\")\n",
         "\n",
@@ -299,9 +294,7 @@
         "        print(f\"\\nWARNING: {len(overlap)} trips in both train and test!\")\n",
         "        print(f\"   This indicates data leakage\")\n",
         "    else:\n",
-        "        print(f\"\\n✅ No trip_id overlap (no data leakage)\")\n",
-        "\n",
-        "print(f\"\\n✅ Data integrity verified\")"
+        "        print(f\"\\n✅ No trip_id overlap (no data leakage)\")"
       ]
     },
     {
