using predicted_speed t-1 instead of real speed -clean code eval 08

--- a/notebooks/08_ml_validate_quality.ipynb
+++ b/notebooks/08_ml_validate_quality.ipynb
@@ -136,42 +136,29 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 5: Feature Engineering (Same as Training)\n",
+        "# CELL 5: Feature Engineering (Same as Training) - CLEANED\n",
         "print(\"\\nPerforming feature engineering on test set...\")\n",
         "\n",
-        "# Column normalization\n",
         "column_mapping = {\n",
         "    'timestamp_sensor': 'timestamp',\n",
         "    'latitude': 'position_lat',\n",
         "    'longitude': 'position_long',\n",
         "    'speed_ms': 'speed_mps',\n",
         "    'altitude': 'enhanced_altitude',\n",
-        "    'acc_forward': 'acceleration_m_s2',\n",
-        "    'acceleration': 'acceleration'\n",
+        "    'acc_forward': 'acceleration',\n",
         "}\n",
         "\n",
         "for old, new in column_mapping.items():\n",
         "    if old in df_test.columns and new not in df_test.columns:\n",
         "        df_test.rename(columns={old: new}, inplace=True)\n",
         "\n",
-        "# Sort by trip and time\n",
+        "\n",
         "if 'trip_id' in df_test.columns:\n",
         "    df_test = df_test.sort_values(['trip_id', 'seconds_elapsed'])\n",
         "else:\n",
         "    df_test = df_test.sort_values('seconds_elapsed')\n",
         "\n",
-        "# Previous speed values\n",
-        "if 'trip_id' in df_test.columns:\n",
-        "    df_test['speed_mps_prev1'] = df_test.groupby('trip_id')['speed_mps'].shift(1).fillna(0)\n",
-        "    df_test['speed_mps_prev2'] = df_test.groupby('trip_id')['speed_mps'].shift(2).fillna(0)\n",
-        "else:\n",
-        "    df_test['speed_mps_prev1'] = df_test['speed_mps'].shift(1).fillna(0)\n",
-        "    df_test['speed_mps_prev2'] = df_test['speed_mps'].shift(2).fillna(0)\n",
         "\n",
-        "# Acceleration from raw speed\n",
-        "df_test['acceleration'] = (df_test['speed_mps'] - df_test['speed_mps_prev1']).fillna(0)\n",
-        "\n",
-        "# Delta features\n",
         "if 'position_lat' in df_test.columns and 'position_long' in df_test.columns:\n",
         "    if 'trip_id' in df_test.columns:\n",
         "        df_test['delta_lat'] = df_test.groupby('trip_id')['position_lat'].diff().fillna(0)\n",
@@ -185,7 +172,7 @@
         "    df_test['delta_lon'] = 0\n",
         "    df_test['delta_dist'] = 0\n",
         "\n",
-        "# Elevation gain\n",
+        "\n",
         "if 'enhanced_altitude' in df_test.columns:\n",
         "    if 'trip_id' in df_test.columns:\n",
         "        df_test['elev_gain_m'] = df_test.groupby('trip_id')['enhanced_altitude'].diff().fillna(0)\n",
@@ -194,14 +181,14 @@
         "else:\n",
         "    df_test['elev_gain_m'] = 0\n",
         "\n",
-        "# Traffic level\n",
+        "\n",
         "if 'label_traffic' in df_test.columns:\n",
         "    traffic_map = {'heavy': 2, 'moderate': 1, 'light': 0}\n",
         "    df_test['traffic_level'] = df_test['label_traffic'].map(traffic_map).fillna(1)\n",
         "else:\n",
         "    df_test['traffic_level'] = 1\n",
         "\n",
-        "# Heading/bearing features\n",
+        "\n",
         "if 'bearing' not in df_test.columns:\n",
         "    df_test['bearing'] = 0\n",
         "    \n",
@@ -212,10 +199,11 @@
         "    \n",
         "df_test['turn_count'] = (np.abs(df_test['heading_change']) > 15).astype(int)\n",
         "\n",
-        "# Fill any remaining NaN values\n",
+        "\n",
         "df_test = df_test.fillna(0)\n",
         "\n",
-        "print(\"✅ Feature engineering complete\")"
+        "print(\"✅ Feature engineering complete\")\n",
+        "print(\"⚠️  NOTE: speed_mps_prev1/prev2 will be created in autoregressive loop (Cell 7)\")"
       ]
     },
     {
@@ -253,7 +241,6 @@
         "print(\"⚠️ This loops through data row-by-row. It may take a few minutes for large datasets.\")\n",
         "\n",
         "# 1. Sort data is CRITICAL for autoregressive logic\n",
-        "# Pastikan data urut waktu per trip\n",
         "if 'trip_id' in df_test.columns:\n",
         "    df_test = df_test.sort_values(['trip_id', 'seconds_elapsed']).reset_index(drop=True)\n",
         "else:\n",
@@ -261,7 +248,7 @@
         "\n",
         "# 2. Initialize columns\n",
         "df_test['predicted_speed'] = 0.0\n",
-        "# Kita perlu tahu index kolom prev speed di dalam list feature_cols\n",
+        "\n",
         "idx_prev1 = feature_cols.index('speed_mps_prev1')\n",
         "idx_prev2 = feature_cols.index('speed_mps_prev2')\n",
         "\n",
@@ -269,17 +256,13 @@
         "print(f\"Updating feature indices: prev1={idx_prev1}, prev2={idx_prev2}\")\n",
         "\n",
         "# 3. Start Autoregressive Loop\n",
-        "# Kita convert ke numpy array dulu supaya sedikit lebih cepat daripada pure pandas loc\n",
-        "# Tapi kita tetap butuh update nilai fitur sebelum scaling\n",
         "\n",
-        "# Prediksi akan disimpan di list dulu\n",
         "predictions = []\n",
         "\n",
         "# Iterasi baris per baris\n",
         "for i in tqdm(range(len(df_test)), desc=\"Predicting per second\"):\n",
         "    \n",
         "    # A. LOGIC UPDATE FEATURE DARI PREDIKSI SEBELUMNYA\n",
-        "    # Cek apakah ini baris pertama dari sebuah trip?\n",
         "    is_new_trip = False\n",
         "    if i == 0:\n",
         "        is_new_trip = True\n",
@@ -297,30 +280,24 @@
         "            prev_pred_2 = prev_pred_1 # Fallback\n",
         "            \n",
         "        # --- UPDATE FITUR UTAMA DI DATAFRAME ---\n",
-        "        # Kita Timpa nilai speed_mps_prev1 yang asalnya dari data asli\n",
-        "        # menjadi data hasil prediksi. INI KUNCINYA.\n",
+        "\n",
         "        df_test.at[i, 'speed_mps_prev1'] = prev_pred_1\n",
         "        df_test.at[i, 'speed_mps_prev2'] = prev_pred_2\n",
         "        \n",
         "    else:\n",
-        "        # Jika awal trip, kita asumsikan start dari 0 atau data asli t=0\n",
-        "        # (Biasanya start dari diam)\n",
+        "        #awal trip, kita asumsikan start dari 0 atau data asli t=0\n",
         "        df_test.at[i, 'speed_mps_prev1'] = 0.0\n",
         "        df_test.at[i, 'speed_mps_prev2'] = 0.0\n",
         "\n",
         "    # B. PREPARE INPUT VECTOR\n",
-        "    # Ambil fitur untuk baris ini (yang sudah di-update prev speed-nya)\n",
         "    X_row = df_test.loc[i, feature_cols].values.reshape(1, -1)\n",
         "    \n",
         "    # C. SCALE\n",
-        "    # Scale input menggunakan scaler yg sama dengan training\n",
         "    X_row_scaled = scaler.transform(X_row)\n",
         "    \n",
         "    # D. PREDICT\n",
-        "    # Prediksi speed saat ini\n",
         "    pred_speed = speed_model.predict(X_row_scaled)[0]\n",
         "    \n",
-        "    # Safety: Speed tidak boleh negatif\n",
         "    if pred_speed < 0: \n",
         "        pred_speed = 0.0\n",
         "        \n",
@@ -334,9 +311,7 @@
         "# Accel = Pred_Speed(t) - Pred_Speed(t-1)\n",
         "# Hati-hati: t-1 nya harus dari trip yang sama.\n",
         "if 'trip_id' in df_test.columns:\n",
-        "    # Shift hasil prediksi untuk mendapatkan t-1\n",
         "    df_test['pred_speed_prev'] = df_test.groupby('trip_id')['predicted_speed'].shift(1).fillna(0)\n",
-        "    # Hitung accel\n",
         "    df_test['predicted_accel'] = df_test['predicted_speed'] - df_test['pred_speed_prev']\n",
         "else:\n",
         "    df_test['pred_speed_prev'] = df_test['predicted_speed'].shift(1).fillna(0)\n",
