remove kl divergence on markov chain

--- a/notebooks/08_validate_quality_metrics.ipynb
+++ b/notebooks/08_validate_quality_metrics.ipynb
@@ -10,7 +10,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title 8. Validate Model Quality (Symmetric KL Divergence + Kinematic Metrics)\n",
+        "# @title 8. Validate Model Quality (Kinematic Metrics)\n",
         "\n",
         "# CELL 1 [TAG: parameters]\n",
         "# ---------------------------------------------------------\n",
@@ -21,11 +21,9 @@
         "INPUT_MODEL_DIR = \"s3://models-quality-eval/2025-01-01_00-00-00/models/\"\n",
         "OUTPUT_METRICS_PATH = \"s3://models-quality-eval/2025-01-01_00-00-00/metrics/quality_metrics.json\"\n",
         "OUTPUT_PLOT_PATH = \"s3://models-quality-eval/2025-01-01_00-00-00/metrics/comparison_plots.png\"\n",
-        "OUTPUT_KL_REPORT_PATH = \"s3://models-quality-eval/2025-01-01_00-00-00/metrics/kl_divergence_report.txt\"\n",
         "VEHICLE_TYPE = 1  # Motorcycle\n",
         "\n",
         "# Quality Thresholds\n",
-        "MAX_KL_DIVERGENCE = 0.55  # Symmetric KL divergence threshold\n",
         "MAX_SPEED_DIFF = 5.0  # km/h\n",
         "MAX_ACCEL_DIFF = 0.5  # m/s²\n",
         "MAX_RMSE_THRESHOLD = 0.15  # VSP RMSE threshold\n",
@@ -49,8 +47,7 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import s3fs\n",
-        "from scipy.stats import entropy\n"
+        "import s3fs\n"
       ]
     },
     {
@@ -89,40 +86,6 @@
         "    counts, _ = np.histogram(data, bins=bins)\n",
         "    total = np.sum(counts)\n",
         "    return counts / total if total > 0 else np.zeros(len(counts))\n",
-        "\n",
-        "def calculate_symmetric_kl_divergence(p, q, epsilon=1e-10):\n",
-        "    \"\"\"\n",
-        "    Calculate Symmetric KL Divergence: d(P,Q) = [KL(P||Q) + KL(Q||P)] / 2\n",
-        "    \n",
-        "    This symmetric version eliminates directional bias in distribution comparison.\n",
-        "    A value close to zero indicates the Markov Chain model accurately replicates\n",
-        "    the speed and acceleration distribution patterns from real-world data.\n",
-        "    \n",
-        "    Following methodology from driving behavior classification research,\n",
-        "    this uses 2D probability distributions of (velocity, acceleration) as\n",
-        "    drive cycle characteristics representation.\n",
-        "    \n",
-        "    Args:\n",
-        "        p: Synthetic data distribution (from model)\n",
-        "        q: Real data distribution (ground truth)\n",
-        "        epsilon: Small value to avoid log(0)\n",
-        "    \n",
-        "    Returns:\n",
-        "        Symmetric KL divergence value (lower is better, 0 = perfect match)\n",
-        "    \"\"\"\n",
-        "    # Add small epsilon to avoid division by zero\n",
-        "    p = p + epsilon\n",
-        "    q = q + epsilon\n",
-        "    # Renormalize\n",
-        "    p = p / np.sum(p)\n",
-        "    q = q / np.sum(q)\n",
-        "    \n",
-        "    # Calculate both directions\n",
-        "    kl_pq = np.sum(p * np.log(p / q))  # KL(P||Q)\n",
-        "    kl_qp = np.sum(q * np.log(q / p))  # KL(Q||P)\n",
-        "    \n",
-        "    # Return symmetric average\n",
-        "    return (kl_pq + kl_qp) / 2.0\n",
         "\n",
         "def generate_synthetic_sequence(matrix, states, length):\n",
         "    \"\"\"Generates a random walk using the trained matrix.\"\"\"\n",
@@ -178,21 +141,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 6: Generate & Compare with Enhanced Metrics\n",
+        "# CELL 6: Generate & Compare with Kinematic Metrics\n",
         "vsp_bins = np.arange(-20, 40, 2)\n",
-        "speed_bins = np.arange(0, 120, 5)  # Speed bins for KL divergence\n",
+        "speed_bins = np.arange(0, 120, 5)  # Speed bins for distribution plots\n",
         "metrics = {}\n",
         "traffic_labels = {0: \"Heavy Traffic\", 1: \"Light Traffic\"}\n",
-        "kl_report_lines = []\n",
-        "\n",
-        "kl_report_lines.append(\"=\" * 60)\n",
-        "kl_report_lines.append(\"SYMMETRIC KL DIVERGENCE QUALITY EVALUATION REPORT\")\n",
-        "kl_report_lines.append(f\"Run Timestamp: {RUN_TIMESTAMP}\")\n",
-        "kl_report_lines.append(\"=\" * 60)\n",
-        "kl_report_lines.append(\"\")\n",
-        "kl_report_lines.append(\"Metric: Symmetric KL Divergence d(P,Q) = [KL(P||Q) + KL(Q||P)] / 2\")\n",
-        "kl_report_lines.append(\"This eliminates directional bias in distribution comparison.\")\n",
-        "kl_report_lines.append(\"\")\n",
         "\n",
         "plt.figure(figsize=(16, 10))\n",
         "for group_idx in range(2):\n",
@@ -233,10 +186,9 @@
         "    speed_diff = abs(avg_speed_real - avg_speed_syn)\n",
         "    accel_diff = abs(avg_accel_real - avg_accel_syn)\n",
         "\n",
-        "    # D. Symmetric KL Divergence on Speed Distribution\n",
+        "    # D. Calculate Speed Distributions (for plotting only)\n",
         "    speed_dist_real = get_distribution(real_speed_kmh, speed_bins)\n",
         "    speed_dist_syn = get_distribution(syn_speed_kmh, speed_bins)\n",
-        "    symmetric_kl_divergence = calculate_symmetric_kl_divergence(speed_dist_syn, speed_dist_real)\n",
         "\n",
         "    # E. Calculate VSP for RMSE\n",
         "    vsp_real = calculate_vsp(real_speed_ms, real_acc, VEHICLE_TYPE)\n",
@@ -249,7 +201,6 @@
         "\n",
         "    # G. Store Metrics\n",
         "    metrics[traffic_labels[group_idx]] = {\n",
-        "        \"symmetric_kl_divergence\": float(symmetric_kl_divergence),\n",
         "        \"avg_speed_real_kmh\": float(avg_speed_real),\n",
         "        \"avg_speed_synthetic_kmh\": float(avg_speed_syn),\n",
         "        \"speed_difference_kmh\": float(speed_diff),\n",
@@ -265,32 +216,18 @@
         "    }\n",
         "\n",
         "    # H. Print Summary\n",
-        "    print(f\"  Symmetric KL Divergence: {symmetric_kl_divergence:.4f}\")\n",
         "    print(f\"  Avg Speed: Real={avg_speed_real:.2f} km/h, Syn={avg_speed_syn:.2f} km/h, Diff={speed_diff:.2f} km/h\")\n",
         "    print(f\"  Avg Accel: Real={avg_accel_real:.3f} m/s², Syn={avg_accel_syn:.3f} m/s², Diff={accel_diff:.3f} m/s²\")\n",
         "    print(f\"  VSP RMSE: {vsp_rmse:.4f}\")\n",
         "\n",
-        "    # I. Add to KL Report\n",
-        "    kl_report_lines.append(f\"\\n{traffic_labels[group_idx]}:\")\n",
-        "    kl_report_lines.append(\"-\" * 60)\n",
-        "    kl_report_lines.append(f\"Symmetric KL Divergence (Speed): {symmetric_kl_divergence:.6f}\")\n",
-        "    kl_report_lines.append(f\"Average Speed - Real: {avg_speed_real:.2f} km/h\")\n",
-        "    kl_report_lines.append(f\"Average Speed - Synthetic: {avg_speed_syn:.2f} km/h\")\n",
-        "    kl_report_lines.append(f\"Speed Difference: {speed_diff:.2f} km/h\")\n",
-        "    kl_report_lines.append(f\"Average Acceleration - Real: {avg_accel_real:.4f} m/s²\")\n",
-        "    kl_report_lines.append(f\"Average Acceleration - Synthetic: {avg_accel_syn:.4f} m/s²\")\n",
-        "    kl_report_lines.append(f\"Acceleration Difference: {accel_diff:.4f} m/s²\")\n",
-        "    kl_report_lines.append(f\"VSP RMSE: {vsp_rmse:.6f}\")\n",
-        "    kl_report_lines.append(f\"Test Sample Size: {target_duration} seconds\")\n",
-        "\n",
-        "    # J. Create Plots (2x2 grid per traffic type)\n",
+        "    # I. Create Plots (2x2 grid per traffic type)\n",
         "    base_idx = group_idx * 4\n",
         "    \n",
         "    # Plot 1: Speed Distribution\n",
         "    plt.subplot(2, 4, base_idx + 1)\n",
         "    plt.bar(speed_bins[:-1], speed_dist_real, width=4, alpha=0.5, label='Real', color='blue')\n",
         "    plt.plot(speed_bins[:-1], speed_dist_syn, color='red', linewidth=2, label='Synthetic')\n",
-        "    plt.title(f\"{traffic_labels[group_idx]}\\nSpeed Distribution\\nSymKL={symmetric_kl_divergence:.3f}\")\n",
+        "    plt.title(f\"{traffic_labels[group_idx]}\\nSpeed Distribution\")\n",
         "    plt.xlabel(\"Speed (km/h)\")\n",
         "    plt.ylabel(\"Probability\")\n",
         "    plt.legend()\n",
@@ -345,35 +282,12 @@
         "# Determine pass/fail status\n",
         "failures = []\n",
         "for traffic_type, m in metrics.items():\n",
-        "    if m['symmetric_kl_divergence'] > MAX_KL_DIVERGENCE:\n",
-        "        failures.append(f\"{traffic_type}: Symmetric KL divergence {m['symmetric_kl_divergence']:.4f} > {MAX_KL_DIVERGENCE}\")\n",
         "    if m['speed_difference_kmh'] > MAX_SPEED_DIFF:\n",
         "        failures.append(f\"{traffic_type}: Speed diff {m['speed_difference_kmh']:.2f} > {MAX_SPEED_DIFF} km/h\")\n",
         "    if m['accel_difference_ms2'] > MAX_ACCEL_DIFF:\n",
         "        failures.append(f\"{traffic_type}: Accel diff {m['accel_difference_ms2']:.3f} > {MAX_ACCEL_DIFF} m/s²\")\n",
         "    if m['vsp_rmse'] > MAX_RMSE_THRESHOLD:\n",
         "        failures.append(f\"{traffic_type}: VSP RMSE {m['vsp_rmse']:.4f} > {MAX_RMSE_THRESHOLD}\")\n",
-        "\n",
-        "# Add summary to KL report\n",
-        "kl_report_lines.append(\"\\n\" + \"=\" * 60)\n",
-        "kl_report_lines.append(\"QUALITY THRESHOLDS\")\n",
-        "kl_report_lines.append(\"=\" * 60)\n",
-        "kl_report_lines.append(f\"Max Symmetric KL Divergence: {MAX_KL_DIVERGENCE}\")\n",
-        "kl_report_lines.append(f\"Max Speed Difference: {MAX_SPEED_DIFF} km/h\")\n",
-        "kl_report_lines.append(f\"Max Acceleration Difference: {MAX_ACCEL_DIFF} m/s²\")\n",
-        "kl_report_lines.append(f\"Max VSP RMSE: {MAX_RMSE_THRESHOLD}\")\n",
-        "kl_report_lines.append(\"\")\n",
-        "\n",
-        "if failures:\n",
-        "    kl_report_lines.append(\"\\n❌ VALIDATION FAILED\")\n",
-        "    kl_report_lines.append(\"Failures:\")\n",
-        "    for failure in failures:\n",
-        "        kl_report_lines.append(f\"  - {failure}\")\n",
-        "else:\n",
-        "    kl_report_lines.append(\"\\n✅ VALIDATION PASSED\")\n",
-        "    kl_report_lines.append(\"All metrics within acceptable thresholds.\")\n",
-        "\n",
-        "kl_report_lines.append(\"\\n\" + \"=\" * 60)\n",
         "\n",
         "# Save Plot\n",
         "img_buf = io.BytesIO()\n",
@@ -388,19 +302,18 @@
         "    json.dump(metrics, f, indent=2)\n",
         "print(f\"✅ Metrics saved to {OUTPUT_METRICS_PATH}\")\n",
         "\n",
-        "# Save KL Report\n",
-        "kl_report_text = \"\\n\".join(kl_report_lines)\n",
-        "with fs.open(OUTPUT_KL_REPORT_PATH, 'w') as f:\n",
-        "    f.write(kl_report_text)\n",
-        "print(f\"✅ Symmetric KL Divergence report saved to {OUTPUT_KL_REPORT_PATH}\")\n",
-        "\n",
         "# Quality Gate Summary (NO ERROR RAISED - MODIFIED SECTION)\n",
         "if failures:\n",
         "    print(\"\\n⚠️  Model Quality Validation Failed (Results saved for analysis):\")\n",
         "    for failure in failures:\n",
         "        print(f\"  - {failure}\")\n",
         "else:\n",
-        "    print(\"\\n✅ Model Quality Validation Passed.\")\n"
+        "    print(\"\\n✅ Model Quality Validation Passed.\")\n",
+        "    \n",
+        "print(\"\\n=== QUALITY THRESHOLDS ===\")\n",
+        "print(f\"Max Speed Difference: {MAX_SPEED_DIFF} km/h\")\n",
+        "print(f\"Max Acceleration Difference: {MAX_ACCEL_DIFF} m/s²\")\n",
+        "print(f\"Max VSP RMSE: {MAX_RMSE_THRESHOLD}\")\n"
       ]
     }
   ],
