use combined metric in graph too

--- a/notebooks/08_validate_quality_metrics.ipynb
+++ b/notebooks/08_validate_quality_metrics.ipynb
@@ -189,7 +189,13 @@
         "metrics = {}\n",
         "traffic_labels = {0: \"Heavy Traffic\", 1: \"Light Traffic\"}\n",
         "\n",
-        "fig = plt.figure(figsize=(16, 10))\n",
+        "# Storage for combined plotting\n",
+        "all_real_speed = []\n",
+        "all_syn_speed = []\n",
+        "all_real_vsp = []\n",
+        "all_syn_vsp = []\n",
+        "\n",
+        "fig = plt.figure(figsize=(16, 15))\n",
         "for group_idx in range(2):\n",
         "    print(f\"\\n--- Validating Group {group_idx} ({traffic_labels[group_idx]}) ---\")\n",
         "\n",
@@ -257,16 +263,22 @@
         "        \"test_sample_size_sec\": int(target_duration)\n",
         "    }\n",
         "\n",
-        "    # H. Print Summary\n",
+        "    # H. Store data for combined plot\n",
+        "    all_real_speed.append(real_speed_kmh)\n",
+        "    all_syn_speed.append(syn_speed_kmh)\n",
+        "    all_real_vsp.append(vsp_real)\n",
+        "    all_syn_vsp.append(vsp_syn)\n",
+        "\n",
+        "    # I. Print Summary\n",
         "    print(f\"  Avg Speed: Real={avg_speed_real:.2f} km/h, Syn={avg_speed_syn:.2f} km/h, Diff={speed_diff:.2f} km/h\")\n",
         "    print(f\"  Avg Accel: Real={avg_accel_real:.3f} m/s², Syn={avg_accel_syn:.3f} m/s², Diff={accel_diff:.3f} m/s²\")\n",
         "    print(f\"  VSP RMSE: {vsp_rmse:.4f}\")\n",
         "\n",
-        "    # I. Create Plots (2x2 grid per traffic type)\n",
+        "    # J. Create Plots (3x4 grid: Row 1=Heavy, Row 2=Light, Row 3=Combined)\n",
         "    base_idx = group_idx * 4\n",
         "    \n",
         "    # Plot 1: Speed Distribution\n",
-        "    plt.subplot(2, 4, base_idx + 1)\n",
+        "    plt.subplot(3, 4, base_idx + 1)\n",
         "    plt.bar(speed_bins[:-1], speed_dist_real, width=4, alpha=0.5, label='Real', color='blue')\n",
         "    plt.plot(speed_bins[:-1], speed_dist_syn, color='red', linewidth=2, label='Synthetic')\n",
         "    plt.title(f\"{traffic_labels[group_idx]}\\nSpeed Distribution\")\n",
@@ -275,7 +287,7 @@
         "    plt.legend()\n",
         "    \n",
         "    # Plot 2: VSP Distribution\n",
-        "    plt.subplot(2, 4, base_idx + 2)\n",
+        "    plt.subplot(3, 4, base_idx + 2)\n",
         "    plt.bar(vsp_bins[:-1], vsp_dist_real, width=1.8, alpha=0.5, label='Real', color='blue')\n",
         "    plt.plot(vsp_bins[:-1], vsp_dist_syn, color='red', linewidth=2, label='Synthetic')\n",
         "    plt.title(f\"VSP Distribution\\nRMSE={vsp_rmse:.3f}\")\n",
@@ -284,7 +296,7 @@
         "    plt.legend()\n",
         "    \n",
         "    # Plot 3: Kinematic Comparison - Speed\n",
-        "    plt.subplot(2, 4, base_idx + 3)\n",
+        "    plt.subplot(3, 4, base_idx + 3)\n",
         "    categories = ['Mean', 'Std Dev']\n",
         "    real_vals = [avg_speed_real, std_speed_real]\n",
         "    syn_vals = [avg_speed_syn, std_speed_syn]\n",
@@ -298,13 +310,94 @@
         "    plt.legend()\n",
         "    \n",
         "    # Plot 4: Kinematic Comparison - Acceleration\n",
-        "    plt.subplot(2, 4, base_idx + 4)\n",
+        "    plt.subplot(3, 4, base_idx + 4)\n",
         "    real_vals = [avg_accel_real, std_accel_real]\n",
         "    syn_vals = [avg_accel_syn, std_accel_syn]\n",
         "    plt.bar(x - width/2, real_vals, width, label='Real', color='blue', alpha=0.7)\n",
         "    plt.bar(x + width/2, syn_vals, width, label='Synthetic', color='red', alpha=0.7)\n",
         "    plt.ylabel('Acceleration (m/s²)')\n",
         "    plt.title(f'Acceleration Statistics\\nΔ={accel_diff:.3f} m/s²')\n",
+        "    plt.xticks(x, categories)\n",
+        "    plt.legend()\n",
+        "\n",
+        "# Row 3: Combined Overall Metrics\n",
+        "print(\"\\n--- Computing Combined Overall Metrics ---\")\n",
+        "if len(all_real_speed) == 2:\n",
+        "    # Concatenate all data\n",
+        "    combined_real_speed = np.concatenate(all_real_speed)\n",
+        "    combined_syn_speed = np.concatenate(all_syn_speed)\n",
+        "    combined_real_vsp = np.concatenate(all_real_vsp)\n",
+        "    combined_syn_vsp = np.concatenate(all_syn_vsp)\n",
+        "    \n",
+        "    # Compute distributions\n",
+        "    combined_speed_dist_real = get_distribution(combined_real_speed, speed_bins)\n",
+        "    combined_speed_dist_syn = get_distribution(combined_syn_speed, speed_bins)\n",
+        "    combined_vsp_dist_real = get_distribution(combined_real_vsp, vsp_bins)\n",
+        "    combined_vsp_dist_syn = get_distribution(combined_syn_vsp, vsp_bins)\n",
+        "    combined_vsp_rmse = np.sqrt(np.mean((combined_vsp_dist_real - combined_vsp_dist_syn)**2))\n",
+        "    \n",
+        "    # Compute statistics\n",
+        "    combined_avg_speed_real = np.mean(combined_real_speed)\n",
+        "    combined_avg_speed_syn = np.mean(combined_syn_speed)\n",
+        "    combined_speed_diff = abs(combined_avg_speed_real - combined_avg_speed_syn)\n",
+        "    combined_std_speed_real = np.std(combined_real_speed)\n",
+        "    combined_std_speed_syn = np.std(combined_syn_speed)\n",
+        "    \n",
+        "    # Compute acceleration from speed\n",
+        "    combined_real_speed_ms = combined_real_speed / 3.6\n",
+        "    combined_syn_speed_ms = combined_syn_speed / 3.6\n",
+        "    combined_real_accel = np.gradient(combined_real_speed_ms)\n",
+        "    combined_syn_accel = np.gradient(combined_syn_speed_ms)\n",
+        "    combined_avg_accel_real = np.mean(combined_real_accel)\n",
+        "    combined_avg_accel_syn = np.mean(combined_syn_accel)\n",
+        "    combined_accel_diff = abs(combined_avg_accel_real - combined_avg_accel_syn)\n",
+        "    combined_std_accel_real = np.std(combined_real_accel)\n",
+        "    combined_std_accel_syn = np.std(combined_syn_accel)\n",
+        "    \n",
+        "    print(f\"  Combined Avg Speed: Real={combined_avg_speed_real:.2f} km/h, Syn={combined_avg_speed_syn:.2f} km/h\")\n",
+        "    print(f\"  Combined Avg Accel: Real={combined_avg_accel_real:.3f} m/s², Syn={combined_avg_accel_syn:.3f} m/s²\")\n",
+        "    print(f\"  Combined VSP RMSE: {combined_vsp_rmse:.4f}\")\n",
+        "    \n",
+        "    # Plot 1: Combined Speed Distribution\n",
+        "    plt.subplot(3, 4, 9)\n",
+        "    plt.bar(speed_bins[:-1], combined_speed_dist_real, width=4, alpha=0.5, label='Real', color='blue')\n",
+        "    plt.plot(speed_bins[:-1], combined_speed_dist_syn, color='red', linewidth=2, label='Synthetic')\n",
+        "    plt.title(f\"Combined Overall\\nSpeed Distribution\")\n",
+        "    plt.xlabel(\"Speed (km/h)\")\n",
+        "    plt.ylabel(\"Probability\")\n",
+        "    plt.legend()\n",
+        "    \n",
+        "    # Plot 2: Combined VSP Distribution\n",
+        "    plt.subplot(3, 4, 10)\n",
+        "    plt.bar(vsp_bins[:-1], combined_vsp_dist_real, width=1.8, alpha=0.5, label='Real', color='blue')\n",
+        "    plt.plot(vsp_bins[:-1], combined_vsp_dist_syn, color='red', linewidth=2, label='Synthetic')\n",
+        "    plt.title(f\"VSP Distribution\\nRMSE={combined_vsp_rmse:.3f}\")\n",
+        "    plt.xlabel(\"VSP (kW/ton)\")\n",
+        "    plt.ylabel(\"Probability\")\n",
+        "    plt.legend()\n",
+        "    \n",
+        "    # Plot 3: Combined Speed Statistics\n",
+        "    plt.subplot(3, 4, 11)\n",
+        "    categories = ['Mean', 'Std Dev']\n",
+        "    real_vals = [combined_avg_speed_real, combined_std_speed_real]\n",
+        "    syn_vals = [combined_avg_speed_syn, combined_std_speed_syn]\n",
+        "    x = np.arange(len(categories))\n",
+        "    width = 0.35\n",
+        "    plt.bar(x - width/2, real_vals, width, label='Real', color='blue', alpha=0.7)\n",
+        "    plt.bar(x + width/2, syn_vals, width, label='Synthetic', color='red', alpha=0.7)\n",
+        "    plt.ylabel('Speed (km/h)')\n",
+        "    plt.title(f'Speed Statistics\\nΔ={combined_speed_diff:.2f} km/h')\n",
+        "    plt.xticks(x, categories)\n",
+        "    plt.legend()\n",
+        "    \n",
+        "    # Plot 4: Combined Acceleration Statistics\n",
+        "    plt.subplot(3, 4, 12)\n",
+        "    real_vals = [combined_avg_accel_real, combined_std_accel_real]\n",
+        "    syn_vals = [combined_avg_accel_syn, combined_std_accel_syn]\n",
+        "    plt.bar(x - width/2, real_vals, width, label='Real', color='blue', alpha=0.7)\n",
+        "    plt.bar(x + width/2, syn_vals, width, label='Synthetic', color='red', alpha=0.7)\n",
+        "    plt.ylabel('Acceleration (m/s²)')\n",
+        "    plt.title(f'Acceleration Statistics\\nΔ={combined_accel_diff:.3f} m/s²')\n",
         "    plt.xticks(x, categories)\n",
         "    plt.legend()\n",
         "\n",
