add vsp metrics

--- a/notebooks/05_predict_speed_accel.ipynb
+++ b/notebooks/05_predict_speed_accel.ipynb
@@ -236,7 +236,9 @@
    "outputs": [],
    "source": [
     "with fs.open(OUTPUT_PREDICTIONS_PATH, 'w') as f:\n",
-    "    df_pred.to_csv(f, index=False)\n"
+    "    df_pred.to_csv(f, index=False)\n",
+    "    \n",
+    "print(\"Prediction result saved to:\", OUTPUT_PREDICTIONS_PATH)"
    ]
   }
  ],
